modify code; stack/queue

--- a/Stack_Queue/020.valid-parentheses.md
+++ b/Stack_Queue/020.valid-parentheses.md
@@ -90,19 +90,17 @@ Output: true
 ```c++
 class Solution {
 public:
-    bool isValid(string s) {
-        unordered_map<int,int> pare = { {')','('}, {']','['}, {'}','{'} };
-        stack<char> st;
-        
-        for (char c : s) {
-            if (c == '(' || c == '[' || c == '{') st.push(c);
-            else {
-                if (st.empty() || st.top() != pare[c]) return false;
-                st.pop();
+    bool isValid(string str) {
+        unordered_map<char,char> match = { {')', '('}, {']', '['}, {'}', '{'} };
+        stack<char> s;
+        for (char c : str) {
+            if (match.count(c)) {
+                if (s.empty() || s.top() != match[c]) return false;
+                s.pop();
             }
+            else s.push(c);
         }
-        
-        return st.empty();
+        return s.empty();
     }
 };
 ```
