--- a/Stack_Queue/032.longest-valid-parentheses.md
+++ b/Stack_Queue/032.longest-valid-parentheses.md
@@ -44,30 +44,29 @@ Explanation: The longest valid parentheses substring is "()()"
 ```c++
 class Solution {
 public:
-    int longestValidParentheses(string s) {
-        stack<int> st;
-        st.push(-1);
+    int longestValidParentheses(string str) {
+        unordered_map<char,char> match = { {')', '('}, {']', '['}, {'}', '{'} };
+
+        stack<int> s;
+        s.push(-1);
         
-        int n = s.length();
-        for (int i = 0; i < n; i++) {
-            if (s[i] == '(') st.push(i);
-            else {
-                if (!st.empty() && s[st.top()] == '(') st.pop();
-                else st.push(i);
+        for (int i = 0; i < str.length(); i++) {
+            if (match.count(str[i])) {
+                if (s.top() == -1 || str[s.top()] != match[str[i]]) s.push(i);
+                else s.pop();
             }
+            else s.push(i);
         }
-        st.push(n);
         
-        int maxlen = 0;
-        int low = 0, high = n;
-        while (!st.empty()) {
-            low = st.top();
-            st.pop();
-            maxlen = max(maxlen, high - low - 1);
+        int res = 0, high = str.length(), low;
+        while (!s.empty()) {
+            low = s.top();
+            s.pop();
+            res = max(res, high - low - 1);
             high = low;
         }
         
-        return maxlen;
+        return res;
     }
 };
 ```
