--- a/Stack_Queue/084.largest-rectangle-in-histogram.md
+++ b/Stack_Queue/084.largest-rectangle-in-histogram.md
@@ -33,29 +33,31 @@ Output: 10
 ```
 
 ### 解法
-维护一个升序单调栈, 使用栈存比当前高度小的板的下标, 则栈中下标对应的高度从栈顶往栈底递减. 遇到一块比栈顶小的, 则可以开始计算面积, 依次弹出栈顶. 注意最后加一个0.
+维护一个单调递增栈: 
+- 如果当前高度比栈顶大(或相等)则入栈(下标),
+- 否则依次出栈并且每次以出栈高度计算矩形面积:
+    - 该元素到当前元素之间是递增的,
+    - 该元素高度>=当前栈顶高度.
+    - 故矩形高度为该元素高度, 宽度为当前下标-栈顶下标-1.
 ```c++
 class Solution {
 public:
     int largestRectangleArea(vector<int>& heights) {
         stack<int> s;
+        s.push(-1);
         heights.push_back(0);
         
-        int i = 0;
-        int area = 0;
-        while (i < heights.size()) {
-            if (s.empty() || heights[i] > heights[s.top()]) {
-                s.push(i);
-                i++;
-            }
-            else {
+        int res = 0;
+        for (int i = 0; i < heights.size(); i++) {
+            while (s.top() != -1 && heights[i] < heights[s.top()]) {
                 int t = s.top();
                 s.pop();
-                area = max(area, heights[t] * (s.empty() ? i : i - s.top() - 1));
+                res = max(res, heights[t] * (i - s.top() - 1));
             }
+            s.push(i);
         }
         
-        return area;
+        return res;
     }
 };
 ```
