--- a/Stack_Queue/150.evaluate-reverse-polish-notation.md
+++ b/Stack_Queue/150.evaluate-reverse-polish-notation.md
@@ -97,16 +97,14 @@ public:
         };
         
         stack<int> s;
-        for (string &t : tokens) {
-            if (!ops.count(t)) {
-                s.push(stoi(t));
-            }
+        for (string t : tokens) {
+            if (!ops.count(t)) s.push(stoi(t));
             else {
-                int num1 = s.top();
-                s.pop();
                 int num2 = s.top();
                 s.pop();
-                s.push(ops[t](num2, num1));
+                int num1 = s.top();
+                s.pop();
+                s.push(ops[t](num1, num2));
             }
         }
         
