--- a/Stack_Queue/155.min-stack.md
+++ b/Stack_Queue/155.min-stack.md
@@ -50,40 +50,25 @@ minStack.getMin();   --> Returns -2.
 ```c++
 class MinStack {
 public:
-    /** initialize your data structure here. */
-    MinStack() {
-        
-    }
-    
     void push(int x) {
-        data.push(x);
-        if (mins.empty()) mins.push(x);
-        else mins.push(min(x, mins.top()));
+        s.push(x);
+        t.push(min(x, !t.empty() ? t.top() : INT_MAX));
     }
     
     void pop() {
-        if (!data.empty()) data.pop();
-        if (!mins.empty()) mins.pop();
+        s.pop();
+        t.pop();
     }
     
     int top() {
-        return !data.empty() ? data.top() : -1;
+        return s.top();
     }
     
     int getMin() {
-        return !mins.empty() ? mins.top() : -1;
+        return t.top();
     }
     
 private:
-    stack<int> data;
-    stack<int> mins;
+    stack<int> s, t;
 };
-/**
- * Your MinStack object will be instantiated and called as such:
- * MinStack obj = new MinStack();
- * obj.push(x);
- * obj.pop();
- * int param_3 = obj.top();
- * int param_4 = obj.getMin();
- */
 ```
