--- a/Stack_Queue/295.find-median-from-data-stream.md
+++ b/Stack_Queue/295.find-median-from-data-stream.md
@@ -86,20 +86,20 @@ findMedian() -> 2
 class MedianFinder {
 public:
     void addNum(int num) {
-        if (left.empty() || num < left.top()) left.push(num);
+        if (left.empty() || num <= left.top()) left.push(num);
         else right.push(num);
-        if (right.size() == left.size() + 1) {
-            left.push(right.top());
-            right.pop();
-        }
-        if (left.size() == right.size() + 2) {
+        if (left.size() - right.size() == 2) {
             right.push(left.top());
             left.pop();
+        }
+        if (right.size() - left.size() == 1) {
+            left.push(right.top());
+            right.pop();
         }
     }
     
     double findMedian() {
-        return left.size() > right.size() ? left.top() : (left.top() + right.top()) / 2.0;
+        return !left.empty() ? (left.size() > right.size() ? left.top() : (left.top() + right.top()) / 2.0) : 0;
     }
     
 private:
