--- a/Stack_Queue/496.next-greater-element-i.md
+++ b/Stack_Queue/496.next-greater-element-i.md
@@ -65,17 +65,17 @@ Explanation:
     The length of both nums1 and nums2 would not exceed 1000.
     
 ### 解法
-维护一个单调栈, 每次入栈前弹出栈中比当前数小的数并在map中记录他们的右大值.
+维护一个单调递减栈, 每次入栈前弹出栈中比当前数小的数并在map中记录他们的右大值.
 ```c++
 class Solution {
 public:
     vector<int> nextGreaterElement(vector<int>& findNums, vector<int>& nums) {
         stack<int> s;
-        unordered_map<int, int> leftmax;
+        unordered_map<int, int> greater;
         
         for (int num : nums) {
             while (!s.empty() && s.top() < num) {
-                leftmax[s.top()] = num;
+                greater[s.top()] = num;
                 s.pop();
             }
             s.push(num);
@@ -83,9 +83,8 @@ public:
         
         vector<int> res;
         for (int num : findNums) {
-            res.push_back(leftmax.count(num) ? leftmax[num] : -1);
+            res.push_back(greater.count(num) ? greater[num] : -1);
         }
-        
         return res;
     }
 };
