--- a/Stack_Queue/239.sliding-window-maximum.md
+++ b/Stack_Queue/239.sliding-window-maximum.md
@@ -64,12 +64,11 @@ public:
     vector<int> maxSlidingWindow(vector<int>& nums, int k) {
         vector<int> res;
         deque<int> q;
-        int n = nums.size();
-        for (int i = 0; i < n; i++) {
-            while (!q.empty() && nums[q.back()] <= nums[i]) q.pop_back();
-            while (!q.empty() && i - q.front() + 1 > k) q.pop_front();
+        for (int i = 0; i < nums.size(); i++) {
+            while (!q.empty() && nums[i] >= nums[q.back()]) q.pop_back();
+            while (!q.empty() && i - q.front() >= k) q.pop_front();
             q.push_back(i);
-            if (i+1 >= k) res.push_back(nums[q.front()]);
+            if (i >= k - 1) res.push_back(nums[q.front()]);
         }
         return res;
     }
