add new problem

--- a/Greedy/045.jump-game-ii.md
+++ b/Greedy/045.jump-game-ii.md
@@ -11,6 +11,7 @@
 数组中的每个元素代表你在该位置可以跳跃的最大长度。
 
 你的目标是使用最少的跳跃次数到达数组的最后一个位置。
+
 **示例:**
 
 ```
@@ -48,22 +49,19 @@ class Solution {
 public:
     int jump(vector<int>& nums) {
         int n = nums.size();
-        int currMax = 0;
-        int cnt = 0;
-        int pos = 0;
+        int cnt = 0, pos = 0, currMax = 0, prevMax = 0;
         
         while (pos < n && currMax < n - 1) {
-            int prevMax = currMax;
+            prevMax = currMax;
             while (pos <= prevMax) {
-                currMax = max(pos + nums[pos], currMax);
-                if (currMax >= n - 1) {
-                    break;
-                }
+                currMax = max(currMax, pos + nums[pos]);
+                if (currMax >= n - 1) break;
                 pos++;
             }
             cnt++;
         }
-            
+        
         return cnt;
     }
 };
+```
