--- a/Greedy/435.non-overlapping-intervals.md
+++ b/Greedy/435.non-overlapping-intervals.md
@@ -64,7 +64,7 @@ Explanation: You don't need to remove any of the intervals since they're already
 ```
 
 ### 解法
-贪心, 按右端点排序后依次取不相交的并更新右端点.
+按右端点排序后依次取不相交的并更新右端点.
 ```c++
 /**
  * Definition for an interval.
