--- a/Greedy/055.jump-game.md
+++ b/Greedy/055.jump-game.md
@@ -55,16 +55,12 @@ Explanation: You will always arrive at index 3 no matter what. Its maximum
 class Solution {
 public:
     bool canJump(vector<int>& nums) {
+        int maxn = 0;
         int n = nums.size();
-        int farthest = 0;
         for (int i = 0; i < n - 1; i++) {
-            if (farthest < i) {
-                return false;
-            }
-            farthest = max(farthest, i + nums[i]);
-            if (farthest >= n-1) {
-                return true;
-            }
+            if (maxn < i) return false;
+            maxn = max(maxn, i + nums[i]);
+            if (maxn >= n-1) return true;
         }
         return n <= 1;
     }
