--- a/Greedy/121.best-time-to-buy-and-sell-stock.md
+++ b/Greedy/121.best-time-to-buy-and-sell-stock.md
@@ -56,14 +56,12 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 class Solution {
 public:
     int maxProfit(vector<int>& prices) {
-        int preMin = INT_MAX;
-        int profit = 0;
-        for (int i = 0; i < prices.size(); i++) {
-            preMin = min(preMin, prices[i]);
-            profit = max(profit, prices[i] - preMin);
+        int res = 0, preMin = INT_MAX;
+        for (int p : prices) {
+            preMin = min(preMin, p);
+            res = max(res, p - preMin);
         }
-        
-        return profit;
+        return res;
     }
 };
 ```
