--- a/Greedy/122.best-time-to-buy-and-sell-stock-ii.md
+++ b/Greedy/122.best-time-to-buy-and-sell-stock-ii.md
@@ -76,11 +76,11 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 class Solution {
 public:
     int maxProfit(vector<int>& prices) {
-        int profit = 0;
+        int res = 0;
         for (int i = 1; i < prices.size(); i++) {
-            profit += max(prices[i] - prices[i-1], 0);
+            res += max(0, prices[i] - prices[i-1]);
         }
-        return profit;        
+        return res;
     }
 };
 ```
