--- a/Greedy/135.candy.md
+++ b/Greedy/135.candy.md
@@ -63,28 +63,23 @@ class Solution {
 public:
     int candy(vector<int>& ratings) {
         int n = ratings.size();
-        if (n <= 1) {
-            return n;
-        }
+        vector<int> candies(n, 1);
         
-        vector<int> candy(n, 1);
         for (int i = 1; i < n; i++) {
             if (ratings[i] > ratings[i-1]) {
-                candy[i] = candy[i-1] + 1;
+                candies[i] = candies[i-1] + 1;
             }
         }
-        
         for (int i = n-2; i >= 0; i--) {
-            if (ratings[i] > ratings[i+1]) {
-                candy[i] = max(candy[i], candy[i+1]+1);
+            if (ratings[i] > ratings[i+1] && candies[i] <= candies[i+1]) {
+                candies[i] = candies[i+1] + 1;
             }
         }
         
         int sum = 0;
-        for (int i = 0; i < n; i++) {
-            sum += candy[i];
+        for (int c : candies) {
+            sum += c;
         }
-        
         return sum;
     }
 };
