modify code; dp

--- a/DynamicProgramming/053.maximum-subarray.md
+++ b/DynamicProgramming/053.maximum-subarray.md
@@ -43,13 +43,11 @@ DP更新公式:
 class Solution {
 public:
     int maxSubArray(vector<int>& nums) {
-        int maxSum = INT_MIN, currSum = 0;
-        
+        int curSum = 0, maxSum = INT_MIN;
         for (int num : nums) {
-            currSum = max(currSum + num, num);
-            maxSum = max(maxSum, currSum);
+            curSum = max(curSum + num, num);
+            maxSum = max(maxSum, curSum);
         }
-        
         return maxSum;
     }
 };
