--- a/DynamicProgramming/063.unique-paths-ii.md
+++ b/DynamicProgramming/063.unique-paths-ii.md
@@ -78,13 +78,13 @@ public:
         if (grid.empty()) return 0;
         int m = grid.size(), n = grid[0].size();
         
-        vector<int> dp(n);
-        dp[0] = !grid[0][0];
+        vector<int> dp(n, 0);
+        dp[0] = !grid[0][0] ? 1 : 0;
         
         for (int i = 0; i < m; i++) {
-            dp[0] *= !grid[i][0];
+            dp[0] = !grid[i][0] ? dp[0] : 0;
             for (int j = 1; j < n; j++) {
-                dp[j] = (dp[j] + dp[j-1]) * !grid[i][j];
+                dp[j] = !grid[i][j] ? dp[j] + dp[j-1] : 0;
             }
         }
         
