--- a/DynamicProgramming/070.climbing-stairs.md
+++ b/DynamicProgramming/070.climbing-stairs.md
@@ -71,18 +71,13 @@ DP更新公式:
 class Solution {
 public:
     int climbStairs(int n) {
-        if (n <= 0) {
-            return 0;
+        int f1 = 1, f2 = 1;
+        for (int i = 0; i < n - 1; i++) {
+            int t = f1;
+            f1 = f2;
+            f2 = t + f2;
         }
-        
-        int f0 = 1, f1 = 1;
-        for (int i = 0; i < n-1; i++) {
-            int tmp = f1;
-            f1 = f0 + f1;
-            f0 = tmp;
-        }
-        
-        return f1;
+        return f2;        
     }
 };
 ```
