--- a/DynamicProgramming/085.maximal-rectangle.md
+++ b/DynamicProgramming/085.maximal-rectangle.md
@@ -56,43 +56,43 @@ public:
         int m = matrix.size(), n = matrix[0].size();
         
         vector<int> left(n, 0), right(n, n), height(n, 0);
-        int maxArea = 0;
+        int area = 0;
+        
         for (int i = 0; i < m; i++) {
-            int curr_left = 0, curr_right = n;
+            int cur_left = 0, cur_right = n;
+            
             for (int j = 0; j < n; j++) {
                 if (matrix[i][j] == '1') height[j]++;
                 else height[j] = 0;
             }
-                
+            
             for (int j = 0; j < n; j++) {
-                if (matrix[i][j] == '1') {
-                    left[j] = max(left[j], curr_left);
-                }
+                if (matrix[i][j] == '1') left[j] = max(left[j], cur_left);
                 else {
                     left[j] = 0;
-                    curr_left = j + 1;
+                    cur_left = j + 1;
                 }
             }
-                
-            for (int j = n-1; j >= 0; j--) {
-                if (matrix[i][j] == '1') {
-                    right[j] = min(right[j], curr_right);
-                }
+            
+            for (int j = n - 1; j >= 0; j--) {
+                if (matrix[i][j] == '1') right[j] = min(right[j], cur_right);
                 else {
                     right[j] = n;
-                    curr_right = j;
+                    cur_right = j;
                 }
             }
-                
+            
             for (int j = 0; j < n; j++) {
-                maxArea = max(maxArea, (right[j] - left[j]) * height[j]);
-            }                
+                area = max(area, height[j] * (right[j] - left[j]));
+            }
         }
         
-        return maxArea;
+        return area;
     }
 };
 ```
+
+
 OR:
 将每一行及其上方看成一个直方图, 1代表高度, 0代表无, 则转化为84.
 对每一行求maxRect.
@@ -114,12 +114,14 @@ public:
         }
         return maxMatrixArea;       
     }
+    
     void getHistgram(vector<int> &sum, vector<char> &row, const int n) {
         for (int i = 0; i < n; i++) {
             int val = row[i] - '0';
             sum[i] = val == 0 ? 0 : (sum[i] + val);
         }
     }
+    
     int getMaxHistgramArea(vector<int> &height, const int n) {
         stack<int> s;
         int i = 0;
