--- a/DynamicProgramming/091.decode-ways.md
+++ b/DynamicProgramming/091.decode-ways.md
@@ -71,23 +71,16 @@ class Solution {
 public:
     int numDecodings(string s) {
         int n = s.length();
-        if (!n) return 0;
-        
-        int dp[n];
-        dp[0] = 1;        
+        vector<int> dp(n + 1, 0);
+        dp[0] = 1;
         
         for (int i = 1; i <= n; i++) {
-            int cnt1 = 0, cnt2 = 0;
-            if (s[i-1] != '0') {
-                cnt1 = dp[i-1];
-            }
-            if (i > 1 && (s[i-2] == '1' || (s[i-2] == '2' && (s[i-1] >='0' && s[i-1] <= '6')))) {
-                cnt2 = dp[i-2];
-            }
+            int cnt1 = s[i-1] != '0' ? dp[i-1] : 0;
+            int cnt2 = i > 1 && (s[i-2] == '2' && s[i-1] >= '0' && s[i-1] <= '6' || s[i-2] == '1') ? dp[i-2] : 0;
             dp[i] = cnt1 + cnt2;
         }
         
-        return dp[n];
+        return n ? dp.back() : 0;
     }
 };
 ```
