--- a/DynamicProgramming/115.distinct-subsequences.md
+++ b/DynamicProgramming/115.distinct-subsequences.md
@@ -97,29 +97,20 @@ babgbag
 class Solution {
 public:
     int numDistinct(string s, string t) {
-        int m = t.length(), n = s.length();
-        vector<int> line(n+1, 0);
-        vector<vector<int> > dp(m+1, line);
+        int l1 = s.length(), l2 = t.length();
+        vector<vector<int> > dp(l1+1, vector<int>(l2+1, 0));
+        dp[0][0] = 1;
         
-        for (int j = 0; j <= n; j++) {
-            dp[0][j] = 1;
-        }
-        for (int i = 1; i <= m; i++) {
-            dp[i][0] = 0;
-        }
+        for (int i = 1; i <= l1; i++) dp[i][0] = 1;
+        for (int j = 1; j <= l2; j++) dp[0][j] = 0;
         
-        for (int i = 1; i <= m; i++) {
-            for (int j = 1; j <= n; j++) {
-                if (t[i-1] != s[j-1]) {
-                    dp[i][j] = dp[i][j-1];
-                }
-                else {
-                    dp[i][j] = dp[i][j-1] + dp[i-1][j-1];
-                }
+        for (int i = 1; i <= l1; i++) {
+            for (int j = 1; j <= l2; j++) {
+                dp[i][j] = dp[i-1][j] + (s[i-1] == t[j-1] ? dp[i-1][j-1] : 0);
             }
         }
         
-        return dp[m][n];
+        return dp[l1][l2];
     }
 };
 ```
