--- a/DynamicProgramming/123.best-time-to-buy-and-sell-stock-iii.md
+++ b/DynamicProgramming/123.best-time-to-buy-and-sell-stock-iii.md
@@ -85,12 +85,9 @@ class Solution {
 public:
     int maxProfit(vector<int>& prices) {
         int n = prices.size();
-        if (!n) {
-            return 0;
-        }
+        if (!n) return 0;
         
-        int dp[3] = {0};
-        int preMin[3] = {prices[0], prices[0], prices[0]};
+        vector<int> dp(3, 0), preMin(3, prices[0]);
         
         for (int i = 1; i < n; i++) {
             for (int k = 1; k <= 2; k++) {
@@ -99,7 +96,7 @@ public:
             }
         }
         
-        return dp[2];
+        return dp.back();
     }
 };
 ```
