--- a/DynamicProgramming/152.maximum-product-subarray.md
+++ b/DynamicProgramming/152.maximum-product-subarray.md
@@ -67,13 +67,13 @@ Explanation:The result cannot be 2, because [-2,-1] is not a subarray.
 class Solution {
 public:
     int maxProduct(vector<int>& nums) {
-        int res = -INT_MIN;
-        int maxRes = 1, minRes = 1;
+        int res = INT_MIN;
+        int maxProd = 1, minProd = 1;
         for (int num : nums) {
-            if (num < 0) swap(maxRes, minRes);
-            maxRes = max(maxRes * num, num);
-            minRes = min(minRes * num, num);
-            res = max(res, maxRes);
+            if (num < 0) swap(maxProd, minProd);
+            maxProd = max(maxProd * num, num);
+            minProd = min(minProd * num, num);
+            res = max(res, maxProd);
         }
         return res;
     }
