--- a/DynamicProgramming/188.best-time-to-buy-and-sell-stock-iv.md
+++ b/DynamicProgramming/188.best-time-to-buy-and-sell-stock-iv.md
@@ -61,19 +61,17 @@ Explanation: Buy on day 2 (price = 2) and sell on day 3 (price = 6), profit = 6-
 ```c++
 class Solution {
 public:
-    int maxProfit(int K, vector<int>& prices) {
+    int maxProfit(int k, vector<int>& prices) {
         int n = prices.size();
-        if (!n) {
-            return 0;
-        }
-        K = min(K, n / 2);
-        vector<int> dp(K+1, 0);
-        vector<int> mins(K+1, prices[0]);
+        if (!n) return 0;
+        
+        k = min(k, n / 2);
+        vector<int> dp(k + 1, 0), preMin(k + 1, prices[0]);
         
         for (int i = 1; i < n; i++) {
-            for (int k = 1; k <= K; k++) {
-                mins[k] = min(mins[k], prices[i] - dp[k-1]);
-                dp[k] = max(dp[k], prices[i] - mins[k]);
+            for (int l = 1; l <= k; l++) {
+                preMin[l] = min(preMin[l], prices[i] - dp[l-1]);
+                dp[l] = max(dp[l], prices[i] - preMin[l]);
             }
         }
         
