--- a/DynamicProgramming/213.house-robber-ii.md
+++ b/DynamicProgramming/213.house-robber-ii.md
@@ -53,20 +53,18 @@ Explanation: Rob house 1 (money = 1) and then rob house 3 (money = 3).
 class Solution {
 public:
     int rob(vector<int>& nums) {
-        int curr1 = 0, prev11 = 0, prev12 = 0;
-        int curr2 = 0, prev21 = 0, prev22 = 0;
+        int curr1 = 0, prev11 = 0, prev12 = 0, curr2 = 0, prev21 = 0, prev22 = 0;
         int n = nums.size();
-        if (n == 1) {
-            return nums[0]; 
-        }
+        if (n == 1) return nums[0];
+        
         for (int i = 0; i < n; i++) {
-            if (i < n-1) {
-                curr1 = max(prev11, nums[i] + prev12);
+            if (i < n - 1) {
+                curr1 = max(prev12 + nums[i], prev11);
                 prev12 = prev11;
                 prev11 = curr1;
             }
             if (i > 0) {
-                curr2 = max(prev21, nums[i] + prev22);
+                curr2 = max(prev22 + nums[i], prev21);
                 prev22 = prev21;
                 prev21 = curr2;
             }
