--- a/DynamicProgramming/322.coin-change.md
+++ b/DynamicProgramming/322.coin-change.md
@@ -48,34 +48,28 @@ You may assume that you have an infinite number of each kind of coin.
 
     dp[i] = min(dp[i-coins[j]]) + 1, j=0,...,coins.size()-1, 如果dp[i-coins[j]]存在的话.
     
+先将dp等于coin的位置置为1.
+
 ```c++
 class Solution {
 public:
     int coinChange(vector<int>& coins, int amount) {
-        if (coins.empty() || amount <= 0) return 0;
+        vector<int> dp(amount + 1, INT_MAX);
+        dp[0] = 0;
         
-        vector<int> dp(amount+1, -1);
-        
-        for (int c : coins) {
-            if (c <= amount) {
-                dp[c] = 1;
-            }
+        for (int coin : coins) {
+            if (coin <= amount) dp[coin] = 1;
         }
         
         for (int i = 1; i <= amount; i++) {
-            if (dp[i] != -1) {
-                continue;
-            }
-            int num = INT_MAX;
-            for (int c : coins) {
-                if (i - c > 0 && dp[i-c] != -1) {
-                    num = min(num, dp[i-c]);
+            for (int coin : coins) {
+                if (i >= coin && dp[i - coin] != INT_MAX) {
+                    dp[i] = min(dp[i], dp[i - coin] + 1);
                 }
             }
-            dp[i] = max(dp[i], num + 1);
         }
         
-        return dp[amount];
+        return dp.back() != INT_MAX ? dp.back() : -1;
     }
 };
 ```
