--- a/DynamicProgramming/334.increasing-triplet-subsequence.md
+++ b/DynamicProgramming/334.increasing-triplet-subsequence.md
@@ -105,9 +105,7 @@ public:
                 tails.push_back(num);
                 if (tails.size() == 3) return true;
             }
-            else {
-                tails[lower_bound(tails.begin(), tails.end(), num) - tails.begin()] = num;
-            }
+            else tails[lower_bound(tails.begin(), tails.end(), num) - tails.begin()] = num;
         }
         return false;
     }
