--- a/DynamicProgramming/354.russian-doll-envelopes.md
+++ b/DynamicProgramming/354.russian-doll-envelopes.md
@@ -73,3 +73,26 @@ public:
     }
 };
 ```
+
+使用内置函数
+```c++
+class Solution {
+public:
+    int maxEnvelopes(vector<pair<int, int>>& envelopes) {
+        sort(envelopes.begin(), envelopes.end(), [](const pair<int,int> &e1, const pair<int,int> &e2) {
+            return e1.first < e2.first || (e1.first == e2.first && e1.second > e2.second);
+        });
+        
+        vector<pair<int,int> > inc;
+        for (auto en : envelopes) {
+            if (inc.empty() || en.second > inc.back().second) inc.push_back(en);
+            else inc[lower_bound(inc.begin(), inc.end(), en, 
+                [](const pair<int,int> &e1, const pair<int,int> &e2) {
+                    return e1.second < e2.second;
+            }) - inc.begin()] = en;
+        }
+        
+        return inc.size();
+    }
+};
+```
