--- a/DynamicProgramming/494.target-sum.md
+++ b/DynamicProgramming/494.target-sum.md
@@ -157,15 +157,17 @@ class Solution {
 public:
     int findTargetSumWays(vector<int>& nums, int S) {
         int sum = 0;
-        for (int num : nums) sum += num;
-        if ((sum + S) % 2 || S > sum) return 0;
+        for (int num : nums) {
+            sum += num;
+        }
+        if (S > sum || (S + sum) % 2) return 0;
+        sum = (S + sum) / 2;
         
-        int t = (sum + S) / 2;
-        vector<int> dp(t+1, 0);
+        vector<int> dp(sum + 1, 0);
         dp[0] = 1;
         
         for (int num : nums) {
-            for (int j = t; j >= num; j--) {
+            for (int j = sum; j >= num; j--) {
                 dp[j] += dp[j - num];
             }
         }
