--- a/DynamicProgramming/064.minimum-path-sum.md
+++ b/DynamicProgramming/064.minimum-path-sum.md
@@ -61,15 +61,15 @@ class Solution {
 public:
     int minPathSum(vector<vector<int>>& grid) {
         if (grid.empty()) return 0;
-        int m = grid.size(), n = grid[0].size();
         
+        int m = grid.size(), n = grid[0].size();
         vector<int> dp(n, INT_MAX);
         dp[0] = 0;
         
         for (int i = 0; i < m; i++) {
             dp[0] += grid[i][0];
             for (int j = 1; j < n; j++) {
-                dp[j] = min(dp[j], dp[j-1]) + grid[i][j];
+                dp[j] = min(dp[j-1], dp[j]) + grid[i][j];
             }
         }
         
