--- a/DynamicProgramming/072.edit-distance.md
+++ b/DynamicProgramming/072.edit-distance.md
@@ -81,31 +81,19 @@ f(i,j) 表示s[0~i-1]到t[0~j-1]的步数,
 class Solution {
 public:
     int minDistance(string word1, string word2) {
-        const int n1 = word1.length(), n2 = word2.length();
+        int l1 = word1.length(), l2 = word2.length();
+        vector<vector<int> > dp(l1 + 1, vector<int>(l2 + 1, 0));
         
-        int dp[n1+1][n2+1];
+        for (int i = 1; i <= l1; i++) dp[i][0] = i;
+        for (int j = 1; j <= l2; j++) dp[0][j] = j;
         
-        dp[0][0] = 0;
-        
-        for (int i = 1; i <= n1; i++) {
-            dp[i][0] = i;
-        }
-        for (int j = 1; j <= n2; j++) {
-            dp[0][j] = j;
-        }
-        
-        for (int i = 1; i <= n1; i++) {
-            for (int j = 1; j <= n2; j++) {
-                if (word1[i-1] == word2[j-1]) {
-                    dp[i][j] = dp[i-1][j-1];
-                }
-                else {
-                    dp[i][j] = min(dp[i-1][j-1], min(dp[i][j-1], dp[i-1][j])) + 1;
-                }
+        for (int i = 1; i <= l1; i++) {
+            for (int j = 1; j <= l2; j++) {
+                dp[i][j] = word1[i-1] == word2[j-1] ? dp[i-1][j-1] : min(dp[i-1][j-1], min(dp[i-1][j], dp[i][j-1])) + 1;
             }
         }
         
-        return dp[n1][n2];
+        return dp[l1][l2];
     }
 };
 ```
