--- a/DynamicProgramming/139.word-break.md
+++ b/DynamicProgramming/139.word-break.md
@@ -74,25 +74,24 @@ DP: f(i)表示子串s[0...i]可以拆分成字典中的词, 则更新公式:
 ```c++
 class Solution {
 public:
-    bool wordBreak(string s, vector<string>& wordDict) { 
+    bool wordBreak(string s, vector<string>& wordDict) {
         int n = s.length();
         if (!n) return false;
         
-        unordered_set<string> dict(wordDict.begin(), wordDict.end());
-        
-        vector<bool> dp(n + 1, false);
+        unordered_set<string> wordSet(wordDict.begin(), wordDict.end());
+        vector<bool> dp(n+1, false);
         dp[0] = true;
         
         for (int i = 1; i <= n; i++) {
             for (int j = 0; j < i; j++) {
-                if (dp[j] && dict.count(s.substr(j, i-j))) {
+                if (dp[j] && wordSet.count(s.substr(j, i-j))) {
                     dp[i] = true;
                     break;
                 }
             }
         }
         
-        return dp[n];
+        return dp.back();        
     }
 };
 ```
