--- a/DynamicProgramming/198.house-robber.md
+++ b/DynamicProgramming/198.house-robber.md
@@ -60,8 +60,8 @@ class Solution {
 public:
     int rob(vector<int>& nums) {
         int curr = 0, prev1 = 0, prev2 = 0;
-        for (int i = 0; i < nums.size(); i++) {
-            curr = max(prev1, nums[i] + prev2);
+        for (int num : nums) {
+            curr = max(prev2 + num, prev1);
             prev2 = prev1;
             prev1 = curr;
         }
