--- a/DynamicProgramming/221.maximal-square.md
+++ b/DynamicProgramming/221.maximal-square.md
@@ -49,10 +49,9 @@ public:
         int side = 0;
         for (int i = 0; i < m; i++) {
             for (int j = 0; j < n; j++) {
-                int cur = matrix[i][j] - '0';
-                dp[i][j] = cur;
-                if (i > 0 && j > 0 && cur) {
-                    dp[i][j] = min(min(dp[i-1][j], dp[i][j-1]), dp[i-1][j-1]) + 1;
+                dp[i][j] = matrix[i][j] - '0';
+                if (i > 0 && j > 0 && dp[i][j]) {
+                    dp[i][j] = min(dp[i-1][j-1], min(dp[i][j-1], dp[i-1][j])) + 1;
                 }
                 side = max(side, dp[i][j]);
             }
