--- a/DynamicProgramming/300.longest-increasing-subsequence.md
+++ b/DynamicProgramming/300.longest-increasing-subsequence.md
@@ -50,25 +50,18 @@ class Solution {
 public:
     int lengthOfLIS(vector<int>& nums) {
         int n = nums.size();
-        if (!n) {
-            return 0;
-        }
+        vector<int> dp(n, 0);
         
-        int maxLen = 1;
-        int dp[n] = {0};
-        dp[0] = 1;
-        
-        for (int i = 1; i < n; i++) {
+        int maxlen = 0;
+        for (int i = 0; i < n; i++) {
             for (int j = 0; j < i; j++) {
-                if (nums[i] > nums[j]) {
-                    dp[i] = max(dp[i], dp[j]);
-                }
+                dp[i] = max(dp[i], nums[i] > nums[j] ? dp[j] : 0);
             }
             dp[i]++;
-            maxLen = max(maxLen, dp[i]);
+            maxlen = max(maxlen, dp[i]);
         }
         
-        return maxLen;
+        return maxlen;
     }
 };
 ```
@@ -89,19 +82,8 @@ public:
     int lengthOfLIS(vector<int>& nums) {
         vector<int> tails;
         for (int num : nums) {
-            if (!tails.size() || num > tails.back()) {
-                tails.push_back(num);
-            }
-            else {
-                // binary search: first place that >= num
-                int low = 0, high = int(tails.size())-1;
-                while (low < high) {
-                    int mid = (low + high) / 2;
-                    if (tails[mid] < num) low = mid + 1;
-                    else high = mid;
-                }
-                tails[low] = num;
-            }
+            if (tails.empty() || num > tails.back()) tails.push_back(num);
+            else tails[lower_bound(tails.begin(), tails.end(), num) - tails.begin()] = num;
         }
         return tails.size();
     }
