--- a/DynamicProgramming/309.best-time-to-buy-and-sell-stock-with-cooldown.md
+++ b/DynamicProgramming/309.best-time-to-buy-and-sell-stock-with-cooldown.md
@@ -52,15 +52,13 @@ DP: dp[i]表示第i天最大总收益, 分第i天不卖出和卖出的情况,
 class Solution {
 public:
     int maxProfit(vector<int>& prices) {
-        int maxPrev = INT_MIN;
-        int curr = 0, prev1 = 0, prev2 = 0;
-        for (int i = 0; i < prices.size(); i++) {
-            maxPrev = max(maxPrev, prev2 - prices[i]);
-            curr = max(prev1, prices[i] + maxPrev);
+        int curr = 0, prev1 = 0, prev2 = 0, maxPrev = INT_MIN;
+        for (int price : prices) {
+            maxPrev = max(maxPrev, prev2 - price);
+            curr = max(prev1, price + maxPrev);
             prev2 = prev1;
             prev1 = curr;
         }
-        
         return curr;
     }
 };
