--- a/DynamicProgramming/416.partition-equal-subset-sum.md
+++ b/DynamicProgramming/416.partition-equal-subset-sum.md
@@ -131,13 +131,14 @@ public:
 class Solution {
 public:
     bool canPartition(vector<int>& nums) {
-        int n = nums.size();
         int sum = 0;
-        for (int num : nums) sum += num;
+        for (int num : nums) {
+            sum += num;
+        }
         if (sum % 2) return false;
         sum /= 2;
         
-        vector<bool> dp(sum + 1, false);
+        vector<bool> dp(sum+1, false);
         dp[0] = true;
         
         for (int num : nums) {
